Server/Client buttons and gameplays added, messy socket communication implemented

--- a/Jiu Jitsu Assistant/Properties/Resources.de.resx
+++ b/Jiu Jitsu Assistant/Properties/Resources.de.resx
@@ -134,7 +134,7 @@
     <value>..\images\purple-belt.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Main_Title" xml:space="preserve">
-    <value>Jiu Jitsu Assistant</value>
+    <value>der Assistant</value>
   </data>
   <data name="white_belt" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\white-belt.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
